--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="Parallax style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Droqbox.com</title>
 </head>
 <body>
@@ -363,7 +363,7 @@
     <!-- Slider -->
     <div style="margin-left: 90px; margin-right: 90px;">
     <div class="slider slider-trusted">
-        <ul class="slides slides-col" style="">
+        <ul class="slides slides-col">
             <li>
                 <div class="row">
                     <div class="col s6 slides-image-one">
