--- a/index.html
+++ b/index.html
@@ -29,42 +29,42 @@
         <div class="">
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo left">
-                    <i class="fa-brands fa-dropbox fa-sm white-text dropbox-icon blue darken-2"></i><span class="black-text" style="font-weight: 600; font-family: 'Schibsted Grotesk'; letter-spacing: -1.5px; ">Dropbox</span>
+                    <i class="fa-brands fa-dropbox fa-sm white-text dropbox-icon blue darken-2"></i><span class="black-text" style="font-family: 'Schibsted Grotesk'; letter-spacing: -2px; margin-left: -10px;">Dropbox</span>
                 </a>
                 
                 <a href="" class="sidenav-trigger blue-text text-darken-2 right">
                     <i class="fa-solid fa-bars"></i>
                 </a>
                 
-                <ul class="" style="margin-left: 230px;">
+                <ul class="hide-on-med-and-down" style="margin-left: 205px;">
                     <li class="active">
-                        <a href="" class="brown-text darken-4 hide-on-med-and-down"style="font-weight: 300">Why Dropbox?</a>
+                        <a href="" class="brown-text darken-4">Why Dropbox?</a>
                     </li>
                     <li>
-                        <a href="" class="brown-text darken-4 hide-on-med-and-down"style="font-weight: 300">Product</a>
+                        <a href="" class="brown-text darken-4">Product</a>
                     </li>
                     <li>
-                        <a href="" class="brown-text darken-4 hide-on-med-and-down"style="font-weight: 300">Solutions</a>
+                        <a href="" class="brown-text darken-4">Solutions</a>
                     </li>
                     <li>
-                        <a href="" class="brown-text darken-4 hide-on-med-and-down"style="font-weight: 300">Pricing</a>
+                        <a href="" class="brown-text darken-4">Pricing</a>
                     </li>
                 </ul>
                 <ul class="right">
                     <li>
-                        <a href=""><i class="material-icons brown-text darken-4"style="font-weight: 300">language</i></a>
+                        <a href=""><i class="material-icons brown-text darken-4">language</i></a>
                     </li>
                     <li>
-                        <a href="" class="brown-text darken-4 hide-on-med-and-down"style="font-weight: 300">Contact</a>
+                        <a href="" class="brown-text darken-4 hide-on-med-and-down">Contact</a>
                     </li>
                     <li>
-                        <a href="" class="brown-text darken-4 hide-on-med-and-down"style="font-weight: 300">Get app</a>
+                        <a href="" class="brown-text darken-4 hide-on-med-and-down">Get app</a>
                     </li>
                     <li>
-                        <a href="" class="brown-text darken-4"style="font-weight: 300">Sign up</a>
+                        <a href="" class="brown-text darken-4">Sign up</a>
                     </li>
                     <li>
-                        <a href="" class="brown-text darken-4"style="font-weight: 300">Login</a>
+                        <a href="" class="brown-text darken-4">Login</a>
                     </li>
                     <li>
                         <a class="btn btn-default blue darken-2 hide-on-med-and-down" href="" style="text-transform: unset;">
@@ -81,7 +81,7 @@
     <div class="container">
         <br>
         <h2 class="white-text" style="font-weight: 400;">Join over 700 million registered users who trust Dropbox</h2>
-        <p class="white-text">Easy to use, reliable, private, and secure. It’s no wonder Dropbox is the choice for storing and sharing your most important files.</p>
+        <p class="white-text" style="font-size: medium;">Easy to use, reliable, private, and secure. It’s no wonder Dropbox is the choice for storing and sharing your most important files.</p>
         <br>
         <a href="" class="btn blue darken-2 brown-text text-darken-4 btn-large btn-default" style="text-transform: initial;">
             <i class="material-icons right">arrow_forward</i>Find your plan</a>
@@ -151,7 +151,7 @@
                 <a href="" class="learn-more-link">
                     Learn more
                     <i class="material-icons ">arrow_forward</i></a>
-                    <br>
+                    <br><br>
             </div>
             <div class="col s12 m6 l3">
                 <img src="https://fjord.dropboxstatic.com/warp/conversion/dropbox/warp/en-us/Docsend.svg?id=bb81fa5c-7d2e-451b-a3cc-6f5a8ec31dea" alt="" height="50">
@@ -233,7 +233,7 @@
                         <h5 class="white-text">For Work</h5>
                         <br>
                         <p class="white-text">Work efficiently with teammates and clients, stay in sync on projects, and keep company data safe—all in one place.</p>
-                        <br><br><br>
+                        <br><br>
                         <a href="" class="btn blue darken-2 brown-text text-darken-4 btn-large btn-default" style="text-transform:unset;">
                             <i class="material-icons right">arrow_forward</i>Get Dropbox for work</a>
                     </div>
@@ -272,6 +272,7 @@
                 <img src="https://fjord.dropboxstatic.com/warp/conversion/dropbox/warp/en-us/dropbox/1B+_graphitebg.svg?id=de40db5c-8700-4100-9822-4ee6feff8e9f">
                 <h6 class="white-text" style="font-weight: 550;">mobile app downloads</h6>
                 <p class="white-text">with Editors’ Choice Awards from the Google Play and Apple App Store.</p>
+                <br>
             </div>
             <div class="col s12 m6 l3">
                 <img src="https://fjord.dropboxstatic.com/warp/conversion/dropbox/warp/en-us/dropbox/600K_graphitebg.svg?id=b7cced4c-f6a4-4375-9eb9-28e53ea24d7a" alt="">
@@ -289,7 +290,7 @@
 </section>
 <section class="section section-help center">
     <h4 class="product-text" style="letter-spacing: 5px; font-weight: 500;">What else can Dropbox help you do?</h4>
-    <p>Dropbox brings everything—traditional files, cloud content, and web shortcuts—together in one place.</p>
+    <p style="font-size: medium;">Dropbox brings everything—traditional files, cloud content, and web shortcuts—together in one place.</p>
 </section>
     <div class="parallax-container">
         <div class="parallax">
@@ -301,7 +302,7 @@
 <section class="section section-connecting">
     <div class="container">
     <h4 class="center product-text" style="letter-spacing: 5px; font-weight: 500;">Get more out of Dropbox by connecting with the tools you love</h4>
-    <p href="" class="learn-more-link2 center black-text">Learn more about partner integrations</p>
+    <p style="font-size: medium" href="" class="learn-more-link2 center black-text">Learn more about partner integrations</p>
     </div>
     <br><br>
     <div style="margin-left: 100px; margin-right: 100px;"">
@@ -337,6 +338,7 @@
                 <img src="https://fjord.dropboxstatic.com/warp/conversion/dropbox/warp/en-us/dropbox/Integrations_6@2x.png?id=d19d3c69-b60c-4643-a44f-af372679c725&output_type=webp" alt="" width="50">
                 <h6 class="icon-name" style="font-weight: 550;">Trello</h6>
                 <p>Collaborate on team projects in Trello with Dropbox content.</p>
+                <br><br>
             </div>
             <div class="col s12 m6 l3">
                 <img src="https://fjord.dropboxstatic.com/warp/conversion/dropbox/warp/en-us/dropbox/Integrations_7@2x.png?id=bdfc4a9e-36b3-4ff9-a43f-30036c0acc89&output_type=webp" alt="" width="50">
@@ -357,7 +359,7 @@
     <div class="container">
         <br>
         <h4 class="white-text center" style="letter-spacing: 5px;">Trusted by over 700 million registered users and 600,000 teams</h4>
-        <p href="" class="view-more-link center white-text">View more customer stories</p>
+        <p style="font-size: medium" href="" class="view-more-link center white-text">View more customer stories</p>
     </div>
     <br><br>
     <!-- Slider -->
@@ -375,8 +377,8 @@
                             “Dropbox has been tremendously helpful for social media. I can hop on anytime and pull whatever photo is inspiring me to post.”
                             </p>
                                 <br>
-                                <a href="" class="slides-link slides-content">Read the full story   <i class="fa-solid fa-arrow-right" style="margin-left: 10px;"></i></a>
-                            <br><br><br><br><br><br>
+                                <a href="" class="slides-link slides-content" >Read the full story   <i class="fa-solid fa-arrow-right" style="margin-left: 10px;"></i></a>
+                            <br><br><br>
                             <p class="slides-content">Mary Ashley Krogh (MAK), Illustrator and Graphic Designer</p>
                         </div>
                     </div>
@@ -394,7 +396,7 @@
                             </p>
                                 <br>
                                 <a href="" class="slides-link slides-content">Read the full story   <i class="fa-solid fa-arrow-right" style="margin-left: 10px;"></i></a>
-                            <br><br><br><br><br><br>
+                            <br><br><br>
                             <p class="slides-content">Adam Montgomery, Senior Manager of Programming, Sundance Film Festival</p>
                         </div>
                     </div>
@@ -413,7 +415,7 @@
                             </p>
                                 <br>
                                 <a href="" class="slides-link slides-content">Read the full story   <i class="fa-solid fa-arrow-right" style="margin-left: 10px;"></i></a>
-                            <br><br><br><br><br><br>
+                            <br><br><br>
                             <p class="slides-content">Ann Kappes, Director of Art Partnerships at Creativity Explored</p>
                         </div>
                     </div>
@@ -432,7 +434,7 @@
                             </p>
                                 <br>
                                 <a href="" class="slides-link slides-content">Read the full story   <i class="fa-solid fa-arrow-right" style="margin-left: 10px;"></i></a>
-                            <br><br><br><br><br><br>
+                            <br><br><br>
                             <p class="slides-content">Sahir Zaveri, CEO of King Children</p>
                         </div>
                     </div>
@@ -451,7 +453,7 @@
                             </p>
                                 <br>
                                 <a href="" class="slides-link slides-content">Read the full story   <i class="fa-solid fa-arrow-right" style="margin-left: 10px;"></i></a>
-                            <br><br><br><br><br><br>
+                            <br><br><br>
                             <p class="slides-content">Andi Scull, Founder and Creative Director, HOPE Organization</p>
                         </div>
                     </div>
@@ -462,10 +464,10 @@
     <br><br>
     <!-- worth sharing -->
     <div class="row">
-        <div class="col s12 m8">
+        <div class="col s12 m12 l8">
             <h2 class="left-align white-text">For all things worth sharing.</h2>
         </div>
-        <div class="col s12 m4"  style="padding-top: 40px;">
+        <div class="col s12 m12 l4"  style="padding-top: 40px;">
             <a href="" class="btn btn-large btn-default blue darken-4" style="text-transform: unset;">
                 <i class="material-icons right">arrow_forward</i>Refer a friend</a>
         </div>
@@ -495,7 +497,7 @@
                     <a href=""class="footer-link">Security</a>
                     <br><br>
                     <a href=""class="footer-link">Advance access</a>
-                    <br><br>
+                    <br><br><br><br>
                 </div>
                 <div class="col s6 m4 l5ths">
                     <h6 class="white-text">Products</h6>
@@ -515,7 +517,7 @@
                     <a href=""class="footer-link">Plans</a>
                     <br><br>
                     <a href=""class="footer-link">Product update</a>
-                    <br><br>
+                    <br><br><br><br>
                 </div>
                 <div class="col s6 m4 l5ths">
                     <h6 class="white-text">Support</h6>
@@ -535,7 +537,7 @@
                     <a href=""class="footer-link">Sitemap</a>
                     <br><br>
                     <a href=""class="footer-link">Learning resources</a>
-                    <br><br>
+                    <br><br><br><br>
                 </div>
                 <div class="col s6 m4 l5ths">
                     <h6 class="white-text">Community</h6>
@@ -551,7 +553,7 @@
                     <a href=""class="footer-link">Reseller partners</a>
                     <br><br>
                     <a href=""class="footer-link">Integration partners</a>
-                    <br><br> 
+                    <br><br><br><br><br><br><br><br><br><br>
                 </div>
                 <div class="col s6 m4 l5ths">
                     <h6 class="white-text">Company</h6>
@@ -571,7 +573,7 @@
             <br><br>
         <!-- footer icons -->
             <div class="row">
-                <div class="col s3">
+                <div class="col s12 m6 l3">
                     <span class="footer-icons">
                         <i class="fa-brands fa-twitter fa-2xl"></i>
                     </span>
@@ -587,9 +589,9 @@
                 </div>
             </div>
                     <div class="row">
-                        <div class="col s6">
+                        <div class="col s12">
                             <i class="fa-solid fa-globe fa-lg">
-                                <a href="" class="footer-global-link">English (United States)
+                                <a href="" class="footer-global-link" style="font-size: small;">English (United States)
                                 </a>
                             </i>
                             <i class="fa-solid fa-chevron-right fa-sm"></i>
